lab4/01-kubectl/01b-deployment/overlay/ingress/single/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # change this to your DNS name
  - host: demo-1b.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-nginx
            port:
              number: 80
